Bugfix of: "Bug do botão de voltar em todas as telas da funny speech" and "Bug da tela da categoria no qual quebra o autolayout e as dinâmicas ficam inclicavéis"

--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -64,7 +64,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y0i-l1-UM5" userLabel="SecondLabel">
-                                <rect key="frame" x="295" y="36" width="72" height="28"/>
+                                <rect key="frame" x="295" y="-30" width="72" height="28"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="28" id="SV8-sG-di1"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="72" id="fY0-Of-PYV"/>
@@ -137,7 +137,7 @@
                             <constraint firstItem="IsS-BZ-wWy" firstAttribute="leading" secondItem="o4y-xc-Zq0" secondAttribute="leading" constant="159" id="c9u-1c-1bk"/>
                             <constraint firstItem="7xt-9u-gf8" firstAttribute="top" secondItem="7sT-K7-Lpb" secondAttribute="top" constant="175" id="gKl-17-nBA"/>
                             <constraint firstItem="o4y-xc-Zq0" firstAttribute="trailing" secondItem="IsS-BZ-wWy" secondAttribute="trailing" constant="151" id="rMb-gj-9d4"/>
-                            <constraint firstItem="Y0i-l1-UM5" firstAttribute="top" secondItem="o4y-xc-Zq0" secondAttribute="top" constant="36" id="sG8-7e-WEv"/>
+                            <constraint firstItem="Y0i-l1-UM5" firstAttribute="top" secondItem="o4y-xc-Zq0" secondAttribute="top" constant="-30" id="sG8-7e-WEv"/>
                             <constraint firstItem="7xt-9u-gf8" firstAttribute="trailing" secondItem="Y0i-l1-UM5" secondAttribute="trailing" constant="-41.5" id="v2t-GW-4eg"/>
                             <constraint firstItem="IsS-BZ-wWy" firstAttribute="centerX" secondItem="7xt-9u-gf8" secondAttribute="centerX" id="vNh-Oo-HSr"/>
                             <constraint firstItem="u3b-c0-rFS" firstAttribute="top" secondItem="7sT-K7-Lpb" secondAttribute="top" constant="252" id="vR8-ce-lri"/>
@@ -518,32 +518,32 @@
             </objects>
             <point key="canvasLocation" x="-2378" y="2693"/>
         </scene>
-        <!--View Controller-->
+        <!--End Vc Of The Sentences Activity-->
         <scene sceneID="gKj-i0-BxX">
             <objects>
-                <viewController modalPresentationStyle="fullScreen" id="3sy-bA-0Cd" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="3sy-bA-0Cd" customClass="EndVcOfTheSentencesActivity" customModule="romance" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="I5m-Wb-Cfl">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="finalScreenTheSentencesActivity" translatesAutoresizingMaskIntoConstraints="NO" id="UJ0-dO-YSe">
-                                <rect key="frame" x="34" y="151" width="307" height="359"/>
+                                <rect key="frame" x="34" y="-10" width="307" height="359"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dwu-2B-zDh">
-                                <rect key="frame" x="126" y="574" width="123" height="38"/>
+                                <rect key="frame" x="126" y="413" width="123" height="38"/>
                                 <state key="normal" image="Finish"/>
                                 <connections>
-                                    <segue destination="lBF-HX-uKY" kind="push" id="ik5-FZ-rwT"/>
+                                    <action selector="dismissActivityTSA:" destination="3sy-bA-0Cd" eventType="touchUpInside" id="KuW-BP-vo8"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="UJ0-dO-YSe" firstAttribute="top" secondItem="ldi-Gk-jsZ" secondAttribute="top" constant="-10" id="GIe-Lp-EQO"/>
                             <constraint firstItem="UJ0-dO-YSe" firstAttribute="leading" secondItem="ldi-Gk-jsZ" secondAttribute="leading" constant="34" id="OK1-13-ogA"/>
                             <constraint firstItem="dwu-2B-zDh" firstAttribute="centerX" secondItem="UJ0-dO-YSe" secondAttribute="centerX" id="fmv-Xt-te1"/>
                             <constraint firstItem="ldi-Gk-jsZ" firstAttribute="trailing" secondItem="UJ0-dO-YSe" secondAttribute="trailing" constant="34" id="uDS-rU-27l"/>
                             <constraint firstItem="dwu-2B-zDh" firstAttribute="top" secondItem="UJ0-dO-YSe" secondAttribute="bottom" constant="64" id="vp5-Kg-RlV"/>
-                            <constraint firstItem="UJ0-dO-YSe" firstAttribute="top" secondItem="ldi-Gk-jsZ" secondAttribute="top" constant="151" id="xsW-Ls-gra"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ldi-Gk-jsZ"/>
                     </view>
@@ -754,13 +754,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="05" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jxq-Tr-uGF">
-                                <rect key="frame" x="318" y="-30" width="41" height="38.5"/>
+                                <rect key="frame" x="318" y="0.0" width="41" height="38.5"/>
                                 <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="32"/>
                                 <color key="textColor" red="0.10980392160000001" green="0.10980392160000001" blue="0.1176470588" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="It's your turn Eliza!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XP6-FL-05s">
-                                <rect key="frame" x="16" y="43.5" width="265.5" height="38.5"/>
+                                <rect key="frame" x="16" y="73.5" width="265.5" height="38.5"/>
                                 <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="32"/>
                                 <color key="textColor" red="0.10980392160000001" green="0.10980392160000001" blue="0.1176470588" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -774,7 +774,7 @@
                             <constraint firstItem="v6G-rd-gAG" firstAttribute="trailing" secondItem="NT0-5p-zQd" secondAttribute="trailing" id="2or-RR-0Tc"/>
                             <constraint firstItem="NT0-5p-zQd" firstAttribute="leading" secondItem="v6G-rd-gAG" secondAttribute="leading" id="AI4-jL-jxy"/>
                             <constraint firstItem="XP6-FL-05s" firstAttribute="leading" secondItem="v6G-rd-gAG" secondAttribute="leading" constant="16" id="FCa-XJ-JeS"/>
-                            <constraint firstItem="jxq-Tr-uGF" firstAttribute="top" secondItem="v6G-rd-gAG" secondAttribute="top" constant="-30" id="GNs-Tw-h0U"/>
+                            <constraint firstItem="jxq-Tr-uGF" firstAttribute="top" secondItem="v6G-rd-gAG" secondAttribute="top" id="GNs-Tw-h0U"/>
                             <constraint firstItem="v6G-rd-gAG" firstAttribute="bottom" secondItem="NT0-5p-zQd" secondAttribute="bottom" id="Mmx-hd-eor"/>
                             <constraint firstItem="v6G-rd-gAG" firstAttribute="trailing" secondItem="jxq-Tr-uGF" secondAttribute="trailing" constant="16" id="S61-uG-KHi"/>
                             <constraint firstItem="XP6-FL-05s" firstAttribute="top" secondItem="jxq-Tr-uGF" secondAttribute="bottom" constant="35" id="laE-xN-FdU"/>
@@ -1050,7 +1050,7 @@
         <!--Comunicao Tela View Controller-->
         <scene sceneID="L2g-Wz-KW8">
             <objects>
-                <viewController storyboardIdentifier="comunicacao" modalPresentationStyle="fullScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="lBF-HX-uKY" customClass="ComunicaoTelaViewController" customModule="romance" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="comunicacao" wantsFullScreenLayout="YES" modalPresentationStyle="fullScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="lBF-HX-uKY" customClass="ComunicaoTelaViewController" customModule="romance" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ge3-LD-W8s">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1278,7 +1278,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="It's your turn Rita!" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K71-Ro-idg">
-                                <rect key="frame" x="16" y="44" width="246" height="38.5"/>
+                                <rect key="frame" x="16" y="74" width="246" height="38.5"/>
                                 <fontDescription key="fontDescription" name="SFProDisplay-Semibold" family="SF Pro Display" pointSize="32"/>
                                 <color key="textColor" red="0.10980392160000001" green="0.10980392160000001" blue="0.1176470588" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -1287,7 +1287,7 @@
                                 <rect key="frame" x="0.0" y="237" width="375" height="430"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="05" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mPt-ea-2B7">
-                                <rect key="frame" x="312" y="-30" width="41" height="39"/>
+                                <rect key="frame" x="312" y="0.0" width="41" height="39"/>
                                 <rect key="contentStretch" x="1" y="1" width="1" height="1"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="39" id="EO1-Hr-8RR"/>
@@ -1306,7 +1306,7 @@
                             <constraint firstItem="1jM-dI-qeQ" firstAttribute="trailing" secondItem="mPt-ea-2B7" secondAttribute="trailing" constant="22" id="Pou-FV-MV3"/>
                             <constraint firstItem="K71-Ro-idg" firstAttribute="leading" secondItem="1jM-dI-qeQ" secondAttribute="leading" constant="16" id="a0C-TM-Mbp"/>
                             <constraint firstItem="K71-Ro-idg" firstAttribute="top" secondItem="mPt-ea-2B7" secondAttribute="bottom" constant="35" id="glk-6r-A0N"/>
-                            <constraint firstItem="mPt-ea-2B7" firstAttribute="top" secondItem="1jM-dI-qeQ" secondAttribute="top" constant="-30" id="wbV-rg-AMw"/>
+                            <constraint firstItem="mPt-ea-2B7" firstAttribute="top" secondItem="1jM-dI-qeQ" secondAttribute="top" id="wbV-rg-AMw"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="1jM-dI-qeQ"/>
                     </view>
@@ -1336,7 +1336,7 @@
                                 <rect key="frame" x="126" y="520" width="123" height="38"/>
                                 <state key="normal" title="Sair" image="Finish"/>
                                 <connections>
-                                    <segue destination="lBF-HX-uKY" kind="show" id="Sxa-Qw-5AC"/>
+                                    <action selector="dismissFunnySpeech:" destination="igY-58-YhP" eventType="touchUpInside" id="Ufb-rg-AXu"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -1429,7 +1429,7 @@
         <!--Tela Cronometro View Controller-->
         <scene sceneID="qZi-VT-ZeW">
             <objects>
-                <viewController modalPresentationStyle="fullScreen" id="QRi-ft-NKl" customClass="TelaCronometroViewController" customModule="romance" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="telaCronometro" modalPresentationStyle="fullScreen" id="QRi-ft-NKl" customClass="TelaCronometroViewController" customModule="romance" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="aSA-Rn-bS4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1572,7 +1572,7 @@
         <!--End Game View Controller-->
         <scene sceneID="Cnm-Jn-DOt">
             <objects>
-                <viewController modalPresentationStyle="fullScreen" id="O9T-ol-uEL" customClass="EndGameViewController" customModule="romance" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="endTimedDiscussion" modalPresentationStyle="fullScreen" id="O9T-ol-uEL" customClass="EndGameViewController" customModule="romance" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ji0-Fk-y5N">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1584,7 +1584,7 @@
                                 <rect key="frame" x="126" y="555" width="123" height="38"/>
                                 <state key="normal" image="Finish"/>
                                 <connections>
-                                    <action selector="dismissDiscussion:" destination="O9T-ol-uEL" eventType="touchUpInside" id="Ibm-AQ-8kK"/>
+                                    <action selector="dismissDiscussion:" destination="O9T-ol-uEL" eventType="touchUpInside" id="zZw-hu-hdg"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -1666,8 +1666,6 @@
         </namedColor>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="uCI-9h-TSw"/>
         <segue reference="0DR-Ry-B3t"/>
-        <segue reference="ik5-FZ-rwT"/>
     </inferredMetricsTieBreakers>
 </document>
